experimental deploy via rsync fixes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,4 +59,5 @@ jobs:
       - name: Deploy production files
         run: |
           rsync --recursive --verbose --archive --compress --delete-after --recursive --dry-run \
+             -e 'ssh staging' \
              ./dist/ ${{ secrets.STAGING_SSH_USER }}@${{ secrets.STAGING_SSH_HOST }}:/home/${{ secrets.STAGING_SSH_USER }}/smacdo.com/
