--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,4 @@ jobs:
       - name: Deploy production files
         run: |
           rsync --recursive --verbose --archive --compress --delete-after --recursive --dry-run \
-             -e 'ssh staging' \
-             ./dist/ ${{ secrets.STAGING_SSH_USER }}@${{ secrets.STAGING_SSH_HOST }}:/home/${{ secrets.STAGING_SSH_USER }}/smacdo.com/
+             ./dist/ ${{ secrets.STAGING_SSH_USER }}@staging:/home/${{ secrets.STAGING_SSH_USER }}/smacdo.com/
