--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Test project
+        run: npm test
+
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
