Custom React canvas element with simple animation demo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "strictNullChecks": true
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
