--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -27,14 +27,14 @@ jobs:
       - name: Test project
         run: npm test
 
-      - name: Upload production-ready build files
+      - name: Upload build artifact for deployment
         uses: actions/upload-artifact@v4
         with:
-          name: production-files
+          name: deployment-files
           path: ./dist
 
-  deploy_staging:
-    name: deploy to staging environment
+  deploy_prod:
+    name: deploy to prod environment
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -54,12 +54,12 @@ jobs:
           SSH_HOST: ${{ secrets.STAGING_SSH_HOST }}
           SSH_KEY: ${{ secrets.STAGING_SSH_KEY }}
           SSH_USER: ${{ secrets.STAGING_SSH_USER }}
-      - name: Get production files
+      - name: Get deployment artifact
         uses: actions/download-artifact@v4
         with:
-          name: production-files
+          name: deployment-files
           path: ./dist
-      - name: Deploy production files
+      - name: Deploy to prod
         run: |
           rsync --recursive --verbose --archive --compress --delay-updates --delete-after --recursive \
-             ./dist/ ${{ secrets.STAGING_SSH_USER }}@staging:/home/${{ secrets.STAGING_SSH_USER }}/test.smacdo.com/
+             ./dist/ ${{ secrets.STAGING_SSH_USER }}@staging:/home/${{ secrets.STAGING_SSH_USER }}/smacdo.com/
