obscure the host deployment path
it's (probably) not a security risk to expose the deployment path on the ssh host but the less information shown to the public the better, right?

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -11,8 +11,9 @@ jobs:
   call-deploy-template:
     uses: ./.github/workflows/deploy_template.yml
     with:
-      deploy_dir: smacdo.com
+      deployment_name: smacdo.com
     secrets:
+      DEPLOY_DIR: ${{ secrets.PROD_DEPLOY_DIR }}
       SSH_HOST: ${{ secrets.PROD_SSH_HOST }}
       SSH_KEY: ${{ secrets.PROD_SSH_KEY }}
       SSH_USER: ${{ secrets.PROD_SSH_USER }}
