--- a/.github/workflows/deploy_template.yml
+++ b/.github/workflows/deploy_template.yml
@@ -2,10 +2,12 @@ name: Reusable Deploy Workflow
 on:
   workflow_call:
     inputs:
-      deploy_dir:
+      deployment_name:
         required: true
         type: string
     secrets:
+      DEPLOY_DIR:
+        required: true
       SSH_HOST:
         required: true
       SSH_KEY:
@@ -40,7 +42,7 @@ jobs:
           path: ./dist
 
   deploy:
-    name: Deploy to ${{ inputs.deploy_dir }}
+    name: Deploy to ${{ inputs.deployment_name }}
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -68,4 +70,4 @@ jobs:
       - name: Deploy
         run: |
           rsync --recursive --verbose --archive --compress --delay-updates --delete-after \
-             ./dist/ ${{ secrets.SSH_USER }}@remote-host:/home/${{ secrets.SSH_USER }}/${{ inputs.deploy_dir }}/
+             ./dist/ ${{ secrets.SSH_USER }}@remote-host:/${{ secrets.DEPLOY_DIR }}/
