use named environments

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   call-deploy-template:
+    environment: production
     uses: ./.github/workflows/deploy_template.yml
     with:
       deployment_name: smacdo.com
